--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,14 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'io.github.openfeign:feign-hc5:13.4'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	implementation 'org.apache.commons:commons-lang3'
+	implementation 'io.pivotal.cfenv:java-cfenv-all:3.2.0'
+	implementation 'org.springframework.cloud:spring-cloud-bindings:2.0.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
