--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://maven.vaadin.com/vaadin-addons/' }
 }
 
 ext {
@@ -31,6 +32,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'io.github.openfeign:feign-hc5:13.4'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
+	implementation 'org.vaadin.olli:file-download-wrapper:7.1.0'
+	implementation 'org.commonmark:commonmark:0.23.0'
 	implementation 'org.apache.commons:commons-lang3'
 	implementation 'io.pivotal.cfenv:java-cfenv-all:3.2.0'
 	implementation 'org.springframework.cloud:spring-cloud-bindings:2.0.3'
