--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'io.github.openfeign:feign-hc5:13.4'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
