--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ plugins {
 }
 
 group = 'org.cftoolsuite'
-version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
@@ -23,7 +22,7 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2023.0.3")
-	set('vaadinVersion', "24.4.13")
+	set('vaadinVersion', "24.5.0")
 }
 
 dependencies {
@@ -55,4 +54,19 @@ tasks.named('test') {
 
 bootRun {
     systemProperties System.properties
+}
+
+task setVersion {
+    doLast {
+        def newVersion = project.hasProperty('newVersion') ? project.newVersion : version
+        ant.propertyfile(file: "gradle.properties") {
+            entry(key: "version", value: newVersion)
+        }
+    }
+}
+
+task printArtifactPath {
+    doLast {
+        println bootJar.archiveFile.get().asFile.absolutePath
+    }
 }
