Initial assembly of support for targeting K8s and TP4K8s

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'com.gorylenko.gradle-git-properties' version '2.4.2'
 	id 'org.springframework.boot' version '3.3.5'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.eclipse.jkube.kubernetes' version '1.17.0'
 }
 
 group = 'org.cftoolsuite'
@@ -54,6 +55,27 @@ tasks.named('test') {
 
 bootRun {
     systemProperties System.properties
+}
+
+tasks.named('bootBuildImage') {
+	imageName = "docker.io/${project.group.contains('.') ? project.group.tokenize('.').last() : project.group}/${project.name}:${project.version}"
+	tags = [ "docker.io/${project.group.contains('.') ? project.group.tokenize('.').last() : project.group}/${project.name}:latest" ]
+}
+
+kubernetes {
+	buildStrategy = 'buildpacks'
+    generator {
+        config {
+            'spring-boot' {
+                color = 'always'
+            }
+        }
+    }
+    helm {
+        maintainers = [{
+            name = 'Chris Phillipson'
+        }]
+    }
 }
 
 task setVersion {
