--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,13 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.apache.commons:commons-collections4:4.4'
 	implementation 'io.github.openfeign:feign-hc5:13.5'
+	implementation 'com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:4.2.1'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	implementation 'org.vaadin.olli:file-download-wrapper:7.1.0'
-	implementation 'org.commonmark:commonmark:0.24.0'
 	implementation 'org.apache.commons:commons-lang3'
 	implementation 'io.pivotal.cfenv:java-cfenv-all:3.3.0'
 	implementation 'org.springframework.cloud:spring-cloud-bindings:2.0.4'
