Add naive converse UI implementation

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,8 @@ config/
 logs/
 package*.json
 src/main/bundles
-src/main/frontend
+src/main/frontend/generated
+src/main/frontend/index.html
 tsconfig.json
 types.d.ts
 node_modules
