--- a/build.gradle
+++ b/build.gradle
@@ -79,17 +79,17 @@ kubernetes {
     }
 }
 
-task setVersion {
-    doLast {
-        def newVersion = project.hasProperty('newVersion') ? project.newVersion : version
-        ant.propertyfile(file: "gradle.properties") {
-            entry(key: "version", value: newVersion)
-        }
-    }
+tasks.register('setVersion') {
+	doLast {
+		def newVersion = project.hasProperty('newVersion') ? project.newVersion : version
+		ant.propertyfile(file: "gradle.properties") {
+			entry(key: "version", value: newVersion)
+		}
+	}
 }
 
-task printArtifactPath {
-    doLast {
-        println bootJar.archiveFile.get().asFile.absolutePath
-    }
+tasks.register('printArtifactPath') {
+	doLast {
+		println bootJar.archiveFile.get().asFile.absolutePath
+	}
 }
